assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@300&family=Roboto&display=swap');

*{
    margin: 0;
    padding: 0;
    border: none;
    
    
}
 
body{
    font-family: Gemunu libre, sans-serif;
    font-weight: 300;
    padding: 1em 1em;
}

/*Header section style*/

*{
    margin: 0;
    padding: 0;
    border: none;   
}
body{
    font-family: Gemunu libre, sans-serif;
    font-weight: 300;
    padding: 1em 1em;

}
header{
    background-color: rgb(212, 212, 212);
}
a{
    text-decoration: none;
    color: black;
}

/*Nav bar */
.logo{
    font-size: 170%;
    margin-left: 1em;
    cursor: pointer;
    width: 120px;
}

.active{
    border-top: 2px solid #1B16A4;
    font-weight: bold;
}
.active-mob{
    color: red;
    font-weight: bold;
}
.menu{
   position:absolute;
   right: 1em;
   top: 2.3em;
}
.menu ul{
    list-style: none;
    display: inline;
}
.menu ul li{
    display: inline;
    padding: 0em 1em;
    font-size: 1.5em;
}
.menu ul li a{
    padding-bottom: 5px;
    color: #1B16A4;
}
/*hoover style */
.menu ul li a:hover{
    border-bottom: 2px solid #1B16A4;
}

.mob-nav{
    display: flex;
    background-color: rgb(212, 212, 212);
    display: none;
    text-align: left;
    width: 100%;
}
.mob-nav h2 a{
    position:absolute;
    right: 2em;
    top: 1.5em;
}
.mob-list{
    display: none;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1em;
    /* position: absolute; */
}
.mob-list a{
    list-style: none;
    display: block;
    width: 100%;
    margin-bottom: 10px;
    border-bottom: 1px solid black;
}
.mob-menu{
    position:absolute;
    right: 1em;
    top: 0.1em;
}

/* footer */
footer ul{
    background-color: darkgray;
    border-radius: 5px;
    padding: 0.25em 0em;
    margin-top: 0.75em;
    text-align: center;
}
footer ul li{
    display: inline;
    list-style: none;
    padding: 0em 1em;
    font-size: 230%;
}
footer ul li a{
    text-align: center;
}
/* main page */
.main-grid{
    margin-top: 1em;
    margin-bottom: 3em;
    display: grid;
    margin-left: auto;
    margin-right: auto;
    grid-template-columns: 50% 50%;
}
.image img{
    background-repeat: no-repeat;
    background-size: center;
    width: 100%;
    height: 500px;
    border-radius: 15px;
}

.home-about{
    text-align: justify;
    padding-top: auto;
    padding-bottom: auto;
}

.home-about p{
    padding: 1em;
}

 /* apply form style */

 .apply-form{
    border: 1px solid black;
    border-radius: 10px;
    text-align: center;
    margin-top: 2em;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 2em;

}
.apply-form form p{
    margin-bottom: 5px;
}
.apply-form form{
    text-align: center;
}

.apply-form form h1{
    margin: 1em auto;
}
.apply-form form input,textarea{
    border: 1px solid black;
    margin-bottom: 1em;
    padding: 1em;
    border-radius: 5px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    background: #dce3e7;
    width: 80%;
}
.apply-form form button {
    width: 80%;
    padding: 10px;
    margin-top: 2em;
    margin-bottom: 1em;
    border-radius: 20px;
    border: none;
    background: #040e44; 
    font-size: 16px;
    font-weight: 400;
    color: #fff;
}

.apply-form form button:hover {
    background: #2f11b6;
} 

